Re-setup the app for MUI

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,24 +1,13 @@
-:root {
-  --over-modal-z-index: 10000;
-  --accent-gradient: linear-gradient(240deg, rgba(255,0,153,1) 0%, rgba(234,9,144,1) 100%);
-}
-
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, h4, h5, h6, strong { font-weight: 700; }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-#root {
-  overflow: hidden;
 }
